--- a/qa/index.html
+++ b/qa/index.html
@@ -7,7 +7,7 @@
 <title>常规问题</title>
 <link rel="stylesheet" href="css/common.css">
 <script src="js/jquery-1.9.1.min.js"></script>
-<script src="http://carters.ompchina.net/js/project.js"></script>
+<script src="http://h5.cartersonline.cn/js/project.js"></script>
 <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="js/share.js"></script>
 <script src="js/common.js"></script>
